import "kernel/server/protos/serverconf.proto";

package NGranetServer;

message TWizardConfig {
    optional string Url = 1;
    optional uint32 TimeoutMs = 2 [default = 300];
    optional uint32 MaxAttempts = 3 [default = 2];
}

message TGranetServerConfig {
    optional NServer.THttpServerConfig HttpServer = 1;
    optional TWizardConfig Wizard = 2;
}